@@ -1610,6 +1610,16 @@ writes the piece to the appropriate files.</td>
   Specify seeding time in minutes. Also see the <strong>--seed-ratio</strong> option.
 </p>
 </dd>
+</dl></div>
+<div class="admonitionblock">
+<table><tr>
+<td class="icon">
+<div class="title">Note</div>
+</td>
+<td class="content">Specifying <strong>--seed-time</strong>=<em>0</em> disables seeding after download completed.</td>
+</tr></table>
+</div>
+<div class="dlist"><dl>
 <dt class="hdlist1">
 <strong>-T</strong>, <strong>--torrent-file</strong>=TORRENT_FILE
 </dt>
@@ -4047,7 +4057,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-03-28 16:34:53 JST
+Last updated 2010-03-30 21:50:17 JST
 </div>
 </div>
 </body>
